--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "twilio": "^5.7.1",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
@@ -74,6 +75,7 @@
     "postcss": "^8.5",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
